--- a/src/output.css
+++ b/src/output.css
@@ -580,16 +580,12 @@ video {
   position: relative;
 }
 
-.left-2 {
-  left: 0.5rem;
+.left-4 {
+  left: 1rem;
 }
 
 .top-4 {
   top: 1rem;
-}
-
-.left-4 {
-  left: 1rem;
 }
 
 .m-0 {
@@ -598,14 +594,6 @@ video {
 
 .m-10 {
   margin: 2.5rem;
-}
-
-.m-8 {
-  margin: 2rem;
-}
-
-.m-2 {
-  margin: 0.5rem;
 }
 
 .m-3 {
@@ -625,6 +613,11 @@ video {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-0 {
@@ -675,8 +668,8 @@ video {
   margin-top: 1rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.box-border {
+  box-sizing: border-box;
 }
 
 .block {
@@ -695,10 +688,6 @@ video {
   height: 2.5rem;
 }
 
-.h-16 {
-  height: 4rem;
-}
-
 .h-40 {
   height: 10rem;
 }
@@ -715,10 +704,6 @@ video {
   height: 100vh;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -729,10 +714,6 @@ video {
 
 .w-125 {
   width: 500px;
-}
-
-.w-16 {
-  width: 4rem;
 }
 
 .w-40 {
@@ -755,6 +736,18 @@ video {
   width: 100%;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
 .grow {
   flex-grow: 1;
 }
@@ -765,10 +758,6 @@ video {
 
 .list-decimal {
   list-style-type: decimal;
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -785,6 +774,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -809,10 +802,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .border {
@@ -873,6 +862,11 @@ video {
   background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
@@ -886,16 +880,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'https\:\/\/encrypted-tbn0\.gstatic\.com\/images\?q\=tbn\:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w\&usqp\=CAU\'\)\] {
@@ -974,10 +958,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .px-2 {
@@ -1193,6 +1173,21 @@ video {
   padding-right: 0.75rem;
 }
 
+.file\:px-2::file-selector-button {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.file\:px-0::file-selector-button {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.file\:px-4::file-selector-button {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .file\:font-semibold::file-selector-button {
   font-weight: 600;
 }
@@ -1233,6 +1228,31 @@ video {
 .after\:top-4::after {
   content: var(--tw-content);
   top: 1rem;
+}
+
+.after\:left-32::after {
+  content: var(--tw-content);
+  left: 8rem;
+}
+
+.after\:top-6::after {
+  content: var(--tw-content);
+  top: 1.5rem;
+}
+
+.after\:top-7::after {
+  content: var(--tw-content);
+  top: 1.75rem;
+}
+
+.after\:top-5::after {
+  content: var(--tw-content);
+  top: 1.25rem;
+}
+
+.after\:top-3::after {
+  content: var(--tw-content);
+  top: 0.75rem;
 }
 
 .after\:border-8::after {
@@ -1321,7 +1341,7 @@ video {
   display: block;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 390px) {
   .smartphone\:mb-20 {
     margin-bottom: 5rem;
   }
@@ -1332,6 +1352,10 @@ video {
 
   .smartphone\:w-60 {
     width: 15rem;
+  }
+
+  .smartphone\:w-96 {
+    width: 24rem;
   }
 
   .smartphone\:bg-fucsiaCool {
@@ -1346,16 +1370,12 @@ video {
 }
 
 @media (min-width: 500px) {
-  .smartphoneRotate\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .smartphoneRotate\:mt-100 {
-    margin-top: 400px;
-  }
-
   .smartphoneRotate\:mt-20 {
     margin-top: 5rem;
+  }
+
+  .smartphoneRotate\:w-134 {
+    width: 535px;
   }
 
   .smartphoneRotate\:text-5xl {
