--- a/src/output.css
+++ b/src/output.css
@@ -616,6 +616,16 @@ video {
   margin-bottom: 2rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -660,6 +670,14 @@ video {
   margin-top: 1rem;
 }
 
+.mb-28 {
+  margin-bottom: 7rem;
+}
+
+.mb-36 {
+  margin-bottom: 9rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -696,8 +714,12 @@ video {
   height: 100vh;
 }
 
-.h-125 {
-  height: 500px;
+.h-150 {
+  height: 600px;
+}
+
+.h-14 {
+  height: 3.5rem;
 }
 
 .w-10 {
@@ -724,12 +746,16 @@ video {
   width: 100%;
 }
 
-.flex-grow {
+.grow {
   flex-grow: 1;
 }
 
-.grow {
-  flex-grow: 1;
+.basis-1\/2 {
+  flex-basis: 50%;
+}
+
+.basis-1\/4 {
+  flex-basis: 25%;
 }
 
 .cursor-pointer {
@@ -903,10 +929,6 @@ video {
   background-position: center;
 }
 
-.bg-no-repeat {
-  background-repeat: no-repeat;
-}
-
 .p-2 {
   padding: 0.5rem;
 }
@@ -941,11 +963,6 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .pb-10 {
@@ -1291,6 +1308,14 @@ video {
     width: 15rem;
   }
 
+  .smartphone\:basis-1 {
+    flex-basis: 0.25rem;
+  }
+
+  .smartphone\:flex-row {
+    flex-direction: row;
+  }
+
   .smartphone\:bg-fucsiaCool {
     --tw-bg-opacity: 1;
     background-color: rgb(74 4 78 / var(--tw-bg-opacity));
@@ -1312,18 +1337,6 @@ video {
     margin-top: 5rem;
   }
 
-  .smartphoneRotate\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
-  .smartphoneRotate\:h-28 {
-    height: 7rem;
-  }
-
-  .smartphoneRotate\:h-100 {
-    height: 400px;
-  }
-
   .smartphoneRotate\:h-150 {
     height: 600px;
   }
@@ -1331,11 +1344,6 @@ video {
   .smartphoneRotate\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .smartphoneRotate\:hue-rotate-30 {
-    --tw-hue-rotate: hue-rotate(30deg);
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
 }
 
@@ -1350,6 +1358,10 @@ video {
 
   .sm\:w-80 {
     width: 20rem;
+  }
+
+  .sm\:basis-1\/3 {
+    flex-basis: 33.333333%;
   }
 
   .sm\:bg-pink-950 {
@@ -1383,12 +1395,24 @@ video {
     height: 150px;
   }
 
+  .lg\:h-125 {
+    height: 500px;
+  }
+
   .lg\:w-100 {
     width: 400px;
   }
 
   .lg\:w-150 {
     width: 600px;
+  }
+
+  .lg\:w-200 {
+    width: 800px;
+  }
+
+  .lg\:w-screen {
+    width: 100vw;
   }
 
   .lg\:bg-slate-600 {
