--- a/src/input.css
+++ b/src/input.css
@@ -6,10 +6,16 @@
     .card {
         @apply bg-red-500 w-40 h-40 grid place-content-center rounded-lg text-white font-bold border-2 border-red-600 text-4xl;
     }
+    .card2 {
+        @apply bg-red-500 grid place-content-center rounded-lg text-white font-bold border-2 border-red-600 text-4xl;
+    }
     .bricks {
         @apply bg-ladrillo w-10 h-10 grid place-content-center rounded-lg text-white font-bold border-2 border-cemento text-2xl;
     }
     .collage {
         @apply bg-cover bg-center w-50 h-50 grid place-content-center rounded-lg border-2 border-white cursor-pointer;
+    }
+    .collage2 {
+        @apply bg-cover bg-center grid place-content-center rounded-lg border-2 border-white cursor-pointer;
     }
 }
