--- a/src/output.css
+++ b/src/output.css
@@ -572,6 +572,22 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.card2 {
+  display: grid;
+  place-content: center;
+  border-radius: 0.5rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .bricks {
   display: grid;
   height: 2.5rem;
@@ -604,6 +620,18 @@ video {
   background-position: center;
 }
 
+.collage2 {
+  display: grid;
+  cursor: pointer;
+  place-content: center;
+  border-radius: 0.5rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  background-size: cover;
+  background-position: center;
+}
+
 .fixed {
   position: fixed;
 }
@@ -618,6 +646,42 @@ video {
 
 .top-4 {
   top: 1rem;
+}
+
+.col-\[1\/4\] {
+  grid-column: 1/4;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-start-2 {
+  grid-column-start: 2;
+}
+
+.row-\[3\/5\] {
+  grid-row: 3/5;
+}
+
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
+
+.row-span-4 {
+  grid-row: span 4 / span 4;
+}
+
+.row-span-3 {
+  grid-row: span 3 / span 3;
 }
 
 .m-10 {
@@ -635,11 +699,6 @@ video {
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
-}
-
-.mx-7 {
-  margin-left: 1.75rem;
-  margin-right: 1.75rem;
 }
 
 .mx-9 {
@@ -718,6 +777,10 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
@@ -734,8 +797,8 @@ video {
   height: 10rem;
 }
 
-.h-\[120px\] {
-  height: 120px;
+.h-\[100vh\] {
+  height: 100vh;
 }
 
 .h-full {
@@ -786,16 +849,24 @@ video {
   flex-basis: 33.333333%;
 }
 
-.basis-1\/4 {
-  flex-basis: 25%;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
 
 .list-decimal {
   list-style-type: decimal;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -820,6 +891,10 @@ video {
 
 .gap-1 {
   gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-4 {
@@ -1494,15 +1569,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:mx-14 {
-    margin-left: 3.5rem;
-    margin-right: 3.5rem;
-  }
-
-  .md\:h-\[200px\] {
-    height: 200px;
-  }
-
   .md\:w-125 {
     width: 500px;
   }
@@ -1527,11 +1593,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:mx-\[120px\] {
-    margin-left: 120px;
-    margin-right: 120px;
-  }
-
   .lg\:h-\[150px\] {
     height: 150px;
   }
