--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -137,3 +137,179 @@ body {
     height: 50px;
     width: 50px;
 }
+
+/* //////////////////////////////// */
+
+/* ESTILO NAVBAR RESPONSIBE */
+
+.labelDarkNav {
+    width: 65px;
+    height: 25px;
+    position: absolute;
+    top: -16px;
+    left: -155px;
+    display: block;
+    background: #ebebeb;
+    border-radius: 200px;
+    box-shadow: inset 0px 2px 8px rgba(0, 0, 0, 0.2), inset 0px -2px 8px rgba(255, 255, 255, 0.2);
+
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.labelDarkNav::after {
+    content: '';
+    width: 28px;
+    height: 28px;
+    position: absolute;
+    top: -2px;
+    left: 0px;
+    background: linear-gradient(180deg, #ffcc89, #d8860b);
+    border-radius: 50%;
+    box-shadow: 0px 0.15cap 2px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+svg {
+    position: absolute;
+    width: 30px;
+    top: 2px;
+    z-index: 1;
+}
+
+.sun-nav {
+    height: 22px;
+    top: 1px;
+    fill: #fff700;
+    transition: 0.3s;
+}
+
+.moon-nav {
+    height: 25px;
+    left: 35px;
+    top: 0px;
+    fill: #424040;
+    transition: 0.3s;
+    transform: rotateX(0.8);
+}
+
+.inputDarkNav {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    &:checked + label {
+        background: #242424;
+        &:after {
+            left: 65px;
+            transform: translateX(-100%);
+            background: linear-gradient(180deg, #777, #3a3a3a);
+        }
+
+        + .background {
+            background: #242424;
+        }
+    }
+    &:active:after {
+        width: 260px;
+    }
+}
+
+.label-languaje-nav {
+    width: 50px;
+    height: 25px;
+    position: absolute;
+    left: -75px;
+    display: block;
+    background-image: url(https://flagicons.lipis.dev/flags/4x3/ar.svg);
+    background-size: contain;
+    background-position: right;
+    border-radius: 50px;
+    box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4), inset 0px -5px 15px rgba(255, 255, 255, 0.4);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.label-languaje-nav::after {
+    content: '';
+    text-align: center;
+    width: 28px;
+    height: 28px;
+    position: absolute;
+    top: -2px;
+    left: -1px;
+    background: linear-gradient(180deg, #5f89ae, #fff, #5f89ae);
+    content: 'ES';
+    display: grid;
+    align-items: center;
+    color: #000;
+    font-weight: 700;
+    border-radius: 50%;
+    box-shadow: 0px 0.15cap 2px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.input-languaje-nav {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    &:checked + label {
+        background-image: url('https://flagicons.lipis.dev/flags/4x3/us.svg');
+        background-size: cover;
+        background-position: center;
+        &:after {
+            left: 55px;
+            transform: translateX(-100%);
+            background: linear-gradient(180deg, #c05056, #fff, #c05056);
+            content: 'EN';
+        }
+    }
+}
+.label-languaje-nav {
+    width: 50px;
+    height: 25px;
+    position: absolute;
+    left: -75px;
+    display: block;
+    background-image: url(https://flagicons.lipis.dev/flags/4x3/ar.svg);
+    background-size: contain;
+    background-position: right;
+    border-radius: 50px;
+    box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4), inset 0px -5px 15px rgba(255, 255, 255, 0.4);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.label-languaje-nav::after {
+    content: '';
+    text-align: center;
+    width: 28px;
+    height: 28px;
+    position: absolute;
+    top: -2px;
+    left: -1px;
+    background: linear-gradient(180deg, #5f89ae, #fff, #5f89ae);
+    content: 'ES';
+    display: grid;
+    align-items: center;
+    color: #000;
+    font-weight: 700;
+    border-radius: 50%;
+    box-shadow: 0px 0.15cap 2px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.input-languaje-nav {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    &:checked + label {
+        background-image: url('https://flagicons.lipis.dev/flags/4x3/us.svg');
+        background-size: cover;
+        background-position: center;
+        &:after {
+            left: 55px;
+            transform: translateX(-100%);
+            background: linear-gradient(180deg, #c05056, #fff, #c05056);
+            content: 'EN';
+        }
+    }
+}
