--- a/src/output.css
+++ b/src/output.css
@@ -712,6 +712,14 @@ video {
   left: -100%;
 }
 
+.-top-10 {
+  top: -2.5rem;
+}
+
+.-top-20 {
+  top: -5rem;
+}
+
 .left-4 {
   left: 1rem;
 }
@@ -752,12 +760,56 @@ video {
   top: 20px;
 }
 
-.-top-10 {
-  top: -2.5rem;
+.right-6 {
+  right: 1.5rem;
 }
 
-.-top-20 {
-  top: -5rem;
+.-top-16 {
+  top: -4rem;
+}
+
+.-top-\[70px\] {
+  top: -70px;
+}
+
+.-top-\[80px\] {
+  top: -80px;
+}
+
+.-top-\[68px\] {
+  top: -68px;
+}
+
+.-top-\[58px\] {
+  top: -58px;
+}
+
+.-top-\[50px\] {
+  top: -50px;
+}
+
+.-top-\[48px\] {
+  top: -48px;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.-top-\[38px\] {
+  top: -38px;
+}
+
+.-top-\[88px\] {
+  top: -88px;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .col-\[1\/4\] {
@@ -1513,21 +1565,6 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.drop-shadow-2xl {
-  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.drop-shadow {
-  --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.drop-shadow-sm {
-  --tw-drop-shadow: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -2147,6 +2184,14 @@ video {
     top: 0px;
   }
 
+  .tablet\:top-10 {
+    top: 2.5rem;
+  }
+
+  .tablet\:right-2 {
+    right: 0.5rem;
+  }
+
   .tablet\:float-right {
     float: right;
   }
@@ -2165,6 +2210,10 @@ video {
 
   .tablet\:mt-6 {
     margin-top: 1.5rem;
+  }
+
+  .tablet\:block {
+    display: block;
   }
 
   .tablet\:inline-block {
@@ -2191,8 +2240,8 @@ video {
     width: 100vw;
   }
 
-  .tablet\:rounded-md {
-    border-radius: 0.375rem;
+  .tablet\:w-full {
+    width: 100%;
   }
 
   .tablet\:bg-\[\#2A3A47\] {
@@ -2200,13 +2249,9 @@ video {
     background-color: rgb(42 58 71 / var(--tw-bg-opacity));
   }
 
-  .tablet\:bg-slate-500 {
+  .tablet\:bg-\[\#fff\] {
     --tw-bg-opacity: 1;
-    background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-  }
-
-  .tablet\:p-2 {
-    padding: 0.5rem;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
   .tablet\:pl-6 {
